说明书 编译编码更新